# piejam

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
piejam_app/: CMakeLists.txt  main.cpp
piejam_libs/algorithm/: CMakeLists.txt
piejam_libs/algorithm/include/piejam/algorithm/: all_of_adjacent.h  concepts.h  contains.h  copy_or_move.h  edit_script.h  erase_if.h  escape_html.h  find_or_get_first.h  for_each_adjacent.h  for_each_visit.h  index_generate_to.h  index_of.h  npos.h  shift_push_back.h  string_join.h  to_vector.h  transform_accumulate.h  transform_to_vector.h
piejam_libs/algorithm/tests/: CMakeLists.txt  all_of_adjacent_test.cpp  contains_test.cpp  copy_or_move_test.cpp  edit_script_test.cpp  escape_html_test.cpp  find_or_get_first_test.cpp  for_each_adjacent_test.cpp  for_each_visit_test.cpp  index_generate_to_test.cpp  index_of_test.cpp  shift_push_back_test.cpp  to_vector_test.cpp  transform_accumulate_test.cpp  transform_to_vector_test.cpp
piejam_libs/base/: CMakeLists.txt
piejam_libs/base/include/piejam/: assert_deref.h  asserted.h  bool.h  box.h  boxed_map.h  boxed_string.h  boxed_vector.h  default.h  entity_data_map.h  entity_id.h  entity_id_hash.h  entity_map.h  enum.h  float_constant.h  fwd.h  indexed_access.h  integral_constant.h  invalid.h  io_direction.h  io_pair.h  lean_map_facade.h  make_constant.h  map_access.h  math.h  npos.h  on_scope_exit.h  pimpl.h  registry_map.h  renew.h  set_if.h  switch_cast.h  to_underlying.h  tuple.h  tuple_element_compare.h  type_traits.h
piejam_libs/base/include/piejam/math/: clamp.h  pow_n.h
piejam_libs/base/tests/: CMakeLists.txt  box_test.cpp  decay_tuple_elements_test.cpp  entity_data_map_test.cpp  entity_map_test.cpp  indexed_access_test.cpp  math_test.cpp  renew_test.cpp  switch_cast_test.cpp  tuple_test.cpp  type_traits_test.cpp
piejam_libs/file_manager/: CMakeLists.txt
piejam_libs/file_manager/include/piejam/file_manager/: file_browser_controller.h  fwd.h  metadata_extractor.h  recording.h  recording_database.h  recording_list_model.h  recording_scanner.h
piejam_libs/file_manager/src/piejam/file_manager/: file_browser_controller.cpp  metadata_extractor.cpp  recording_database.cpp  recording_list_model.cpp  recording_scanner.cpp
piejam_libs/file_manager/tests/: CMakeLists.txt  recording_database_test.cpp  recording_scanner_test.cpp  recording_test.cpp
piejam_libs/functional/: CMakeLists.txt
piejam_libs/functional/include/piejam/functional/: address_compare.h  any_equal_to.h  compose.h  edge_detect.h  get.h  get_if.h  in_interval.h  memo.h  operators.h
piejam_libs/functional/tests/: CMakeLists.txt  compose_test.cpp  get_if_test.cpp  get_test.cpp  memo_test.cpp  operators_test.cpp
piejam_libs/fx_modules/: CMakeLists.txt
piejam_libs/fx_modules/include/piejam/fx_modules/: init.h  module_registration.h
piejam_libs/fx_modules/resources/: piejam_fx_modules_resources.qrc
piejam_libs/fx_modules/resources/PieJam.FxModules/: FilterView.qml  ScopeView.qml  SpectrumView.qml  TunerView.qml
piejam_libs/fx_modules/resources/PieJam/FxModules/: FilterView.qml  ScopeView.qml
piejam_libs/fx_modules/src/piejam/fx_modules/: init.cpp  module_registration.cpp  module_registration.h
piejam_libs/fx_modules/support/: create_fx_module.py
piejam_libs/gui/tests/: CMakeLists.txt  DbScaleData_test.cpp
piejam_libs/log/: CMakeLists.txt
piejam_libs/log/include/piejam/log/: generic_log_sink.h
piejam_libs/network_manager/: CMakeLists.txt
piejam_libs/network_manager/include/piejam/network_manager/: fwd.h  network_controller.h  network_middleware.h  nfs_client.h  nfs_mount.h  nfs_mount_model.h  nfs_server.h  wifi_manager.h  wifi_network.h  wifi_network_model.h
piejam_libs/network_manager/src/piejam/network_manager/: network_controller.cpp  nfs_client.cpp  nfs_mount_model.cpp  nfs_server.cpp  wifi_manager.cpp  wifi_network_model.cpp
piejam_libs/network_manager/tests/: CMakeLists.txt  network_controller_test.cpp  nfs_client_test.cpp  nfs_mount_test.cpp  nfs_server_test.cpp  wifi_manager_test.cpp
piejam_libs/numeric/benchmarks/: CMakeLists.txt  rms_benchmark.cpp
piejam_libs/numeric/tests/: CMakeLists.txt  align_test.cpp  bit_test.cpp  clamp_test.cpp  dB_convert_test.cpp  float_compare_test.cpp  generators_cosine_window_test.cpp  generators_sine_test.cpp  igen_sine_test.cpp  intops_test.cpp  intx_test.cpp  linear_map_test.cpp  lrot_n_test.cpp  mipp_iterator_test.cpp  normalize_test.cpp  pos_mod_test.cpp  pow_n_test.cpp  rms_test.cpp  rolling_sum_test.cpp
piejam_libs/range/: CMakeLists.txt
piejam_libs/range/tests/: CMakeLists.txt  indices_test.cpp  stride_pointer_iterator_test.cpp  strided_span_test.cpp  table_view_test.cpp  zip_test.cpp
piejam_libs/redux/: CMakeLists.txt
piejam_libs/redux/tests/: CMakeLists.txt  queueing_middleware_test.cpp  selector_test.cpp  store_test.cpp  subscriber_test.cpp  subscriptions_manager_test.cpp  thread_delegate_middleware_test.cpp  thunk_middleware_test.cpp
piejam_libs/runtime/tests/: CMakeLists.txt  audio_engine_middleware_test.cpp  audio_engine_render_test.cpp  dynamic_key_shared_object_map_test.cpp  fader_mappiing_test.cpp  ladspa_fx_middleware_test.cpp  ladspa_instance_manager_mock.h  ladspa_processor_factory_mock.h  middleware_functors_mock.h  midi_assignment_processor_test.cpp  midi_control_middleware_test.cpp  midi_input_controller_mock.h  midi_input_processor_test.cpp  midi_learn_processor_test.cpp  midi_to_parameter_processor_test.cpp  mixer_test.cpp  mute_solo_processor_test.cpp  parameter_map_test.cpp  parameter_processor_factory_test.cpp  parameters_store_test.cpp  set_parameter_value_test.cpp  sound_card_manager_mock.h  state_test.cpp  stream_processor_factory_test.cpp
piejam_libs/system/: CMakeLists.txt
piejam_libs/system/tests/: CMakeLists.txt  dll_test.cpp  test_dll.c
piejam_libs/thread/: CMakeLists.txt
piejam_libs/thread/benchmarks/: CMakeLists.txt  spsc_slot_benchmark.cpp
piejam_libs/thread/tests/: CMakeLists.txt  rt_task_executor_test.cpp  spsc_slot_test.cpp  worker_test.cpp
(+842 files in other folders)
